@@ -83,6 +83,7 @@ node {
 def do_maven(mvn_task){
     def MAVEN = tool 'ORCID_MAVEN'
     try{
+        sh "export MAVEN_OPTS='-XX:MaxPermSize=512m -Xms32m -Xmx2048m -XX:+HeapDumpOnOutOfMemoryError'"
         sh "$MAVEN/bin/mvn $mvn_task"
     } catch(Exception err) {
         throw err
